add equations and label for list of studies

--- a/outline.org
+++ b/outline.org
@@ -502,10 +502,54 @@
    number of criteria were identified.
 
    For the quantitative data analysis a data from a number of studies
-   was used, which were analyzed separately. All the studies whose
-   data was analyzed used the METT paradigm.
+   was used (see Table \ref{listofstudies}), which were analyzed separately. All the studies whose
+   data was analyzed used the METT paradigm. 
+
+   For the first study, overall hit-rates and descriptives were
+   computed. A confusion matrix was then created created and a number
+   of signal detection variables computed. These variables can be
+   derived from $H$, the number of hits (true positives), $CR$, the
+   correct rejections (true negatives), false alarms $FA$ (false
+   positives), and misses $M$ (false negativges),.
+
+   \begin{equation} \label{e_hr}
+   HR = \frac{H}{H + M}
+   \end{equation}
+
+   Equation \ref{e_hr} defines the Hit-rate, also called the
+   True-postive rate or recall.
+
+   \begin{equation} \label{e_crr}
+   CRR = \frac{CR}{CR + FA}
+   \end{equation}
+
+   Equation \ref{e_crr} defines the Correct rejection rate, sometimes
+   referred to as specificity.
+
+   \begin{equation} \label{e_ppv}
+   PPV = \frac{H}{H + FA}
+   \end{equation}
+   
+   Equation \ref{e_ppv} defines the positive predictive value.
+
+   \begin{equation} \label{e_npv}
+   NPV = \frac{CR}{CR + M}
+   \end{equation}
+   
+   Negative predictve value is defined according to Equation
+   \ref{e_npv}.
+
+   \begin{equation} \label{e_balanced_accuracy}
+   PPV = \frac{HR + CRR}{2}
+   \end{equation}
+
+   Equation \ref{e_balanced_accuracy} defines the balanced accuracy.
+
+
+
 
 \input{summaryearlier.tex}
+
 
 
    
