--- a/summaryearlier.tex
+++ b/summaryearlier.tex
@@ -1,6 +1,7 @@
 
 \begin {table}[H]
   \caption{Quantitative data sources}
+  \label{listofstudies}
   \begin{tabularx}{\textwidth}{lllll}
     & \textbf{Subjects} & \textbf{Stimulus-set} & \textbf{$N_{subjects}$} & \textbf{Exposure (\si{\milli\second})} \\
     \toprule
