--- a/paradigms.tex
+++ b/paradigms.tex
@@ -1,6 +1,7 @@
 
 \begin {table}[H]
   \caption{Earlier methods of measuring emotional intelligence}
+  \label{table:paradigms}
   \begin{tabularx}{\textwidth}{llll}
     \textbf{Scale} & \textbf{Subscale} & \textbf{Measure/Task} & \textbf{Model} \\
     \toprule
