--- a/outline.org
+++ b/outline.org
@@ -591,6 +591,7 @@
 
      \input{study-one-hitrates-emotion.tex}
 *** Requirements
+
     By inspecting the earlier research we found a number of suitable
     scales. The least controversial measure is perhaps that of the
     METT. In particular the implementation of METT of the earlier
@@ -606,7 +607,43 @@
     of subfactors, and one of these, identifying feelings have some
     degree of overlap with METT. If the aim is to capture
     qualitatively different factors SPEC may be the most appropriate
-    scale.
+    scale. The test therefore should provide both a METT component and
+    a digital questionarie.
+
+    As discussed earlier \citep[recall][]{Calvo2008a} the duration
+    even a small difference in the display time of a METT trial, it is
+    therefore important that display times are controlled to a
+    resonable degree.
+
+    Because the experiment process is time-consuming, both for the
+    participant and the experimenter it is important that the system
+    is stable and avoids data loss. To ensure that analysis of data is
+    replicable.
+
+    The keyboard is the most suitable input device because it allows
+    for faster responses once the user has learned the
+    options. Moreover, not showing a mouse-cursor would avoid problems
+    stemming from the occlusion of the stimulus by the mouse
+    cursor. Finally, are keyboards is commodity hardware and avoids
+    the need for specialized input hardware.
+    
+    From these earlier conclusions a number of requirements were
+    derived.
+
+    1. METT test
+       1. Functional: The system shall display a forward-mask
+       2. Functional: The system shall display a backward-mask
+       3. Functional: The system shall display a target-imaged
+       4. Functional: The system shall display times shall be precise within  \SI{1/60}{\second}
+       5. Functional: The system shall collect selected emotion input via the keyboard.
+    2. SPEC-test
+       1. Functional: The system shall show the questions
+       2. Functional: The system shall collect numeric responses via keyboard input.
+    3. Persistance
+       1. Functional: The system shall persist results to disk in the CSV format.
+       2. Non-functional: The system shall be stable to avoid data-loss
+
+
 
 
 ** Implementation
