--- a/refs.bib
+++ b/refs.bib
@@ -786,6 +786,24 @@ isbn = {978-3-319-10632-8},
 mendeley-groups = {mag\_dsv},
 publisher = {Springer International Publishing},
 title = {{An Introduction to Design Science}},
+
 url = {http://books.google.com/books?hl=en\&lr=\&id=ovvFBAAAQBAJ\&oi=fnd\&pg=PR5\&dq=An+introduction+to+design+science\&ots=r46R1mQGra\&sig=WL0duRAXRLjUg4dkKpG-ug11c7o http://books.google.com/books?hl=en\&lr=\&id=ovvFBAAAQBAJ\&oi=fnd\&pg=PR5\&dq=An+Introduction+to+Design+Science\&ots=r46R1mQGsa\&sig=r4-yHPSRuNRO5CZ0f87RBidNsus},
 year = {2014}
+}
+@article{Peirce2007,
+abstract = {The vast majority of studies into visual processing are conducted using computer display technology. The current paper describes a new free suite of software tools designed to make this task easier, using the latest advances in hardware and software. PsychoPy is a platform-independent experimental control system written in the Python interpreted language using entirely free libraries. PsychoPy scripts are designed to be extremely easy to read and write, while retaining complete power for the user to customize the stimuli and environment. Tools are provided within the package to allow everything from stimulus presentation and response collection (from a wide range of devices) to simple data analysis such as psychometric function fitting. Most importantly, PsychoPy is highly extensible and the whole system can evolve via user contributions. If a user wants to add support for a particular stimulus, analysis or hardware device they can look at the code for existing examples, modify them and submit the modifications back into the package so that the whole community benefits.},
+author = {Peirce, Jonathan W},
+doi = {10.1016/j.jneumeth.2006.11.017},
+issn = {0165-0270},
+journal = {Journal of neuroscience methods},
+keywords = {Humans,Language,Psychophysics,Psychophysics: instrumentation,Psychophysics: methods,Software},
+mendeley-groups = {mag\_dsv},
+month = may,
+number = {1-2},
+pages = {8--13},
+pmid = {17254636},
+title = {{PsychoPy--Psychophysics software in Python.}},
+url = {http://www.sciencedirect.com/science/article/pii/S0165027006005772},
+volume = {162},
+year = {2007}
 }
