--- a/refs.bib
+++ b/refs.bib
@@ -807,3 +807,29 @@ url = {http://www.sciencedirect.com/science/article/pii/S0165027006005772},
 volume = {162},
 year = {2007}
 }
+
+@article{Beaupre2000,
+author = {Beaupr\'{e}, Martin G and Cheung, N and Hess, Ursula},
+journal = {Available from Ursula Hess, Department of  \ldots},
+mendeley-groups = {mag\_dsv/dbs},
+title = {{The Montreal set of facial displays of emotion}},
+url = {https://scholar.google.com/scholar?q=allintitle:+\%22The+Montreal+Set+of+Facial+Displays+of+Emotion\%22\&hl=en\&as\_sdt=0,5\&as\_ylo=2000\&as\_yhi=2000\#0},
+year = {2000}
+}
+@article{Beaupre2005,
+author = {Beaupr\'{e}, Martin G. and Hess, Ursula},
+doi = {10.1177/0022022104273656},
+file = {:home/whn/data/Mendeley Desktop/Journal of Cross-Cultural Psychology/Beaupre, Hess\_2005\_Cross-Cultural Emotion Recognition among Canadian Ethnic Groups.pdf:pdf},
+isbn = {0022022104},
+issn = {0022-0221},
+journal = {Journal of Cross-Cultural Psychology},
+keywords = {1987,1989,1993,able pan-cultural similarities as,cross-cultural research on emotion,culture,e,ekman,ekman et al,emotion,facial expression,for both consider-,for this cross-cul-,g,in-group advantage,in-group bias,matsumoto,one of the explanations,recognition,recognition has provided evidence,well as cross-cultural differences},
+mendeley-groups = {mag\_dsv},
+month = may,
+number = {3},
+pages = {355--370},
+title = {{Cross-Cultural Emotion Recognition among Canadian Ethnic Groups}},
+url = {http://jcc.sagepub.com/cgi/doi/10.1177/0022022104273656},
+volume = {36},
+year = {2005}
+}
